update to 2.0 (some useless Word tags were introduced here - will need to clean them up)

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-12.htm
@@ -1,51 +1,57 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Organizing Java projects</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Organizing Java projects</H1>
-<P CLASS="Para">
-You can organize Java projects in two different ways. </P>
-<UL CLASS="UnorderedList">
-<LI CLASS="Item">
-Use the project as the container of packages. <br>
-In this organization, all Java packages are created directly inside the project. This is the selected organization by default. 
-The generated CLASS files are stored along with the JAVA source files.</LI>
-<LI CLASS="Item">
-Use source folders as the container for packages. <br>
-In this project organization, packages are not created directly inside the project but in source folders. You create source folders as children of the project and create your packages inside these source folders. </LI>
-</UL>
-<P CLASS="Para">
-The default organization for new projects can be changed on the preference pages (<b>Workbench</b> &gt; 
-<b>Preferences</b> &gt; <b>Java</b>).</P>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p><a href="../concepts/concepts-3.htm">Java projects</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-13.htm">Creating a Java project as its own source 
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
+
+<div class=Section1>
+
+<h1>Organizing Java projects</h1>
+
+<p class=para>You can organize Java projects in two different ways. </p>
+
+<ul type=disc>
+ <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
+     mso-list:l0 level1 lfo1;tab-stops:list .5in'>Use the project as the
+     container of packages. <br>
+     In this organization, all Java packages are created directly inside the
+     project. This is the selected organization by default. The generated CLASS
+     files are stored along with the JAVA source files.</li>
+ <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
+     mso-list:l0 level1 lfo1;tab-stops:list .5in'>Use source folders as the
+     container for packages. <br>
+     In this project organization, packages are not created directly inside the
+     project but in source folders. You create source folders as children of
+     the project and create your packages inside these source folders. </li>
+</ul>
+
+<p class=para>The default organization for new projects can be changed on the
+preference pages (<b>Window</b> &gt; <b>Preferences</b> &gt; <b>Java &gt; New
+Project</b>).</p>
+
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
+
+<p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\tasks\tasks-13.htm">Creating a Java project as its own source
 container</a><br>
-<a href="../tasks/tasks-14.htm">Creating a Java 
-project with source folders</a><br>
-<a href="../tasks/tasks-17.htm">Creating a new Java 
-class</a><br>
-<a href="../tasks/tasks-26.htm">Creating a new 
-source folder</a><br>
-<a href="../tasks/tasks-11.htm">Creating Java 
-elements</a></p>
-<P>&nbsp;<br>
+<a href="..\tasks\tasks-14.htm">Creating a Java project with source folders</a><br>
+<a href="..\tasks\tasks-17.htm">Creating a new Java class</a><br>
+<a href="..\tasks\tasks-26.htm">Creating a new source folder</a><br>
+<a href="..\tasks\tasks-11.htm">Creating Java elements</a></p>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 
-</P>
+</div>
 
+</body>
 
-
-
-
-</BODY>
-</HTML>
+</html>
