--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-15.htm
@@ -1,79 +1,76 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Creating a new Java package</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Creating a new Java package</H1>
-<P CLASS="Para">
-To create new Java packages in the Packages view:</P>
-<ol>
-  <li>
-<P CLASS="Para">
-Optionally, select the project or source folder where you want the package to 
-reside.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Click the <b>Create a Java Package</b> button in the workbench toolbar. The New 
-Java Package wizard opens.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Edit the <b> <SPAN CLASS="Label">
-Source
-Folder</SPAN></b>
- field to indicate in which container you want the new package to reside. You 
-can either type a path or click <b> <SPAN CLASS="Label">
-Browse</SPAN></b> to find the container.
-If a folder was selected when you chose to create the new package, that folder appears in the
-<b> <SPAN CLASS="Label">
-Source
-Folder</SPAN></b>
- field as the container for the new package.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-In the <span class="Label"><b>Name</b></span>
- field, type a name for the new package.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Click <b> <SPAN CLASS="Label">
-Finish</SPAN></b>
- when you are done.</P>
-  </li>
-</ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p>
-<a href="../concepts/concepts-3.htm">Java projects</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p>
-<a href="../tasks/tasks-11.htm">Creating Java 
-elements</a><br>
-<a href="../tasks/tasks-51.htm">Moving folders, 
-packages, and files</a><br>
-<a href="../tasks/tasks-12.htm">Organizing Java 
-projects</a><br>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
+
+<div class=Section1>
+
+<h1>Creating a new Java package</h1>
+
+<p class=para>To create new Java packages in the Package Explorer or the
+Packages view:</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Optionally, select the project or source folder where you want
+the package to reside.</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Click the <b>Create a Java Package</b> button in the workbench
+toolbar. The New Java Package wizard opens.</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Edit the <span class=label><b>Source Folder</b></span> field
+to indicate in which container you want the new package to reside. You can
+either type a path or click <span class=label><b>Browse</b></span> to find the
+container. If a folder was selected when you chose to create the new package,
+that folder appears in the <span class=label><b>Source Folder</b></span> field
+as the container for the new package.</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the <span class=label><b>Name</b></span> field, type a name
+for the new package.</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Click <span class=label><b>Finish</b></span> when you are
+done.</p>
+
+<p class=para><b>Note:</b> the default (unnamed) package always exist and does
+not need to be created.</p>
+
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
+
+<p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
+<a href="..\tasks\tasks-51.htm">Moving folders, packages, and files</a><br>
+<a href="..\tasks\tasks-12.htm">Organizing Java projects</a><br>
 <a href="tasks-77.htm">Opening a package</a><br>
-<a href="../tasks/tasks-90.htm">Renaming a package</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p>
-<a href="../reference/ref-90.htm">Packages view</a></p>
-<P>&nbsp;<br>
+<a href="..\tasks\tasks-90.htm">Renaming a package</a></p>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
 
-</P>
+<p><a href="..\reference\ref-90.htm">Packages view</a></p>
 
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 
+</div>
 
+</body>
 
-
-</BODY>
-</HTML>
+</html>
