--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-18.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-18.htm
@@ -1,131 +1,126 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Creating a standalone class</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Creating a standalone class</H1>
-<P CLASS="Para">
-You can create standalone classes that are not enclosed in other types. </P>
-<ol>
-  <li>
-<P CLASS="Para">
-Open the New Class wizard.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Edit the <span class="Label"><b>Source F</b></span><b><SPAN CLASS="Label">older</SPAN></b>
- field as needed to indicate in which folder you want the new class to reside. You can either type a path or click the
-<b> <SPAN CLASS="Label">
-Browse</SPAN></b>
- button to find the folder.
-If a folder is found for the current selection, that folder appears in the <SPAN CLASS="Label">
-Folder</SPAN>
- field as the container for the new class.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-In the <b> <SPAN CLASS="Label">
-Package</SPAN></b>
- field, type or click <b> <SPAN CLASS="Label">
-Browse</SPAN></b>
- to select the package where you want the new class to reside.
-Leave this field empty to indicate that you want the new class to be created in the default package.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Leave the <b> <SPAN CLASS="Label">
-Enclosing Type</SPAN></b>
- box deselected.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-In the <b> <SPAN CLASS="Label">
-Name</SPAN></b>
- field, type a name for the new class.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Select the <b>public</b> or <b>default</b> access modifier  using the <b> <SPAN CLASS="Label">
-Modifiers</SPAN></b>
- radio buttons.<br>
-<b>Note:</b>	The private and protected options are available only when creating a class enclosed in a type.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Select the <b>abstract</b> or <b>final</b> type modifiers for the new class 
-using the appropriate check boxes:<br>
-<b>Note:</b>	The static option is available only when creating a class enclosed in a type.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-In the <b> <SPAN CLASS="Label">
-Superclass</SPAN></b>
- field, type or click <b> <SPAN CLASS="Label">
-Browse</SPAN></b>
- to select a superclass for the new class.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Click the <b> <SPAN CLASS="Label">
-Add</SPAN></b>
- button to add interfaces for the new class to extend.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-If you want to create some method stubs in the new class:</P>
-<UL CLASS="UnorderedList">
-<LI CLASS="Item">
-Select the <b> <SPAN CLASS="Label">
-public static void main(String[] args)</SPAN></b>
- box if you want the wizard to add the main method to the new class, thus making it a starting point of an application.</LI>
-<LI CLASS="Item">
-Select the <b> <SPAN CLASS="Label">
-Constructors from superclass</SPAN></b> check
- box if you want the wizard to create, in the new class, a set of constructors, one for each of the constructors declared in the superclass. Each of them will have the same number of parameters (of the same types) as the respective constructor from the superclass.</LI>
-<LI CLASS="Item">
-Select the <b> <SPAN CLASS="Label">
-Inherited abstract methods</SPAN></b> check
- box if you want the wizard to generate method stubs for each of the abstract methods that the new class will inherit from its superclass and implemented interfaces.</LI>
-</UL>
-  </li>
-  <li>
-<P CLASS="Para">
-Click <b> <SPAN CLASS="Label">
-Finish</SPAN></b>
- when you are done.</P>
-  </li>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
+
+<div class=Section1>
+
+<h1>Creating a top-level class</h1>
+
+<p class=para>You can create classes that are not enclosed in other types. </p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Open the New Class wizard.</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Edit the <span class=label><b>Source Folder</b></span> field
+as needed to indicate in which folder you want the new class to reside. You can
+either type a path or click the <span class=label><b>Browse</b></span> button
+to find the folder. If a folder is found for the current selection, that folder
+appears in the <span class=label>Folder</span> field as the container for the
+new class.</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the <span class=label><b>Package</b></span> field, type or
+click <span class=label><b>Browse</b></span> to select the package where you
+want the new class to reside. Leave this field empty to indicate that you want
+the new class to be created in the default package.</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Leave the <span class=label><b>Enclosing Type</b></span> box
+deselected.</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the <span class=label><b>Name</b></span> field, type a name
+for the new class.</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Select the <b>public</b> or <b>default</b> access modifier
+using the <span class=label><b>Modifiers</b></span> radio buttons.<br>
+<b>Note:</b> The private and protected options are available only when creating
+a class enclosed in a type.</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Optionally, select the <b>abstract</b> or <b>final</b> modifier
+for the new class using the appropriate check boxes:<br>
+<b>Note:</b> The static option is available only when creating a class enclosed
+in a type. </p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the <span class=label><b>Superclass</b></span> field, type
+or click <span class=label><b>Browse</b></span> to select a superclass for the
+new class.</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>9.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Click the <span class=label><b>Add</b></span> button to add
+interfaces for the new class to implement.</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>10.<span style='font:7.0pt "Times New Roman"'>&nbsp;
+</span><![endif]>If you want to create some method stubs in the new class:</p>
+
+<ol start=10 type=1>
+ <ul type=circle>
+  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
+      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Select the <span
+      class=label><b>public static void main(String[] args)</b></span> box if
+      you want the wizard to add the main method to the new class, thus making
+      it a starting point of an application.</li>
+  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
+      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Select the <span
+      class=label><b>Constructors from superclass</b></span> check box if you
+      want the wizard to create, in the new class, a set of constructors, one
+      for each of the constructors declared in the superclass. Each of them
+      will have the same number of parameters (of the same types) as the
+      respective constructor from the superclass.</li>
+  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
+      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Select the <span
+      class=label><b>Inherited abstract methods</b></span> check box if you
+      want the wizard to generate method stubs for each of the abstract methods
+      that the new class will inherit from its superclass and implemented
+      interfaces.</li>
+ </ul>
 </ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p>
-<a href="../concepts/concepts-3.htm">Java projects</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p> <a href="../tasks/tasks-17.htm">Creating a new Java class</a><br>
-<a href="../tasks/tasks-19.htm">Creating a nested class</a><br>
-<a href="../tasks/tasks-20.htm">Creating a class in 
-an existing compilation unit</a><br>
-<a href="../tasks/tasks-94.htm">Renaming a class, 
-field, or interface</a><br>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>11.<span style='font:7.0pt "Times New Roman"'>&nbsp;
+</span><![endif]>Click <span class=label><b>Finish</b></span> when you are
+done.</p>
+
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
+
+<p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\tasks\tasks-17.htm">Creating a new Java class</a><br>
+<a href="..\tasks\tasks-19.htm">Creating a nested class</a><br>
+<a href="..\tasks\tasks-20.htm">Creating a class in an existing compilation
+unit</a><br>
+<a href="..\tasks\tasks-94.htm">Renaming a class, field, or interface</a><br>
 &nbsp;</p>
 
+<p><br>
+<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 
+</div>
 
+</body>
 
-
-<P><br>
-
-<img src = ../images/ngibmcpy.gif width="195" height="12">
-
-</P>
-
-
-
-
-
-</BODY>
-</HTML>
+</html>
