--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-38.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-38.htm
@@ -1,54 +1,62 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Changing the appearance of the Hierarchy view</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Changing the appearance of the Hierarchy view</H1>
-<P CLASS="Para">
-The Type Hierarchy view offers three different ways to look at a class hierarchy:</P>
-<UL CLASS="UnorderedList">
-<LI CLASS="Item">
-<b>
-<SPAN CLASS="Label">
-Show the Type Hierarchy</SPAN></b>
- displays the type hierarchy of a type. This view shows all super- and subtypes of the selected type. <SPAN CLASS="Filename">
-Object</SPAN>
- is shown in the top-left corner. Interfaces are not shown.</LI>
-<LI CLASS="Item">
-<b>
-<SPAN CLASS="Label">
-Show the Supertype Hierarchy</SPAN></b>
- displays the supertype hierarchy of a type. This view shows all supertypes and the hierarchy of all implemented interfaces. The selected type is always shown in the top-left corner.</LI>
-<LI CLASS="Item">
-<b>
-<SPAN CLASS="Label">
-Show the Subtype Hierarchy</SPAN></b>
- displays the supertype hierarchy of a type. This view shows all subtypes of the selected type and all implementers of an interface. The selected type is always shown in the top-left corner.</LI>
-</UL>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p><a href="../concepts/concepts-6.htm">Java views</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../delete/tasks-37.htm">Using the Hierarchy 
-view</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p>
-<a href="../reference/ref-24.htm">Views and editors</a></p>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
+
+<div class=Section1>
+
+<h1>Changing the appearance of the Hierarchy view</h1>
+
+<p class=para>The Type Hierarchy view offers three different ways to look at a
+type hierarchy (use the toolbar buttons to alternate between them):</p>
+
+<ul type=disc>
+ <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
+     mso-list:l0 level1 lfo3;tab-stops:list .5in'><span class=label><b>Show the
+     Type Hierarchy</b></span> displays the type hierarchy of a type. This view
+     shows all super- and subtypes of the selected type. Type java.lang.<span
+     class=filename>Object</span> is shown in the top-left corner. Interfaces
+     are not shown.</li>
+ <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
+     mso-list:l0 level1 lfo3;tab-stops:list .5in'><span class=label><b>Show the
+     Supertype Hierarchy</b></span> displays the supertype hierarchy of a type.
+     This view shows all supertypes and the hierarchy of all implemented
+     interfaces. The selected type is always shown in the top-left corner.</li>
+ <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
+     mso-list:l0 level1 lfo3;tab-stops:list .5in'><span class=label><b>Show the
+     Subtype Hierarchy</b></span> displays the supertype hierarchy of a type.
+     This view shows all subtypes of the selected type and all implementers of
+     the selected interface (if the view is opened on an interface). The
+     selected type is always shown in the top-left corner.</li>
+</ul>
+
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
+
+<p><a href="..\concepts\concepts-6.htm">Java views</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\delete\tasks-37.htm">Using the Hierarchy view</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
+
+<p><a href="..\reference\ref-24.htm">Views and editors</a></p>
+
 <p>&nbsp;</p>
-<P>&nbsp;<br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 
-</P>
+</div>
 
+</body>
 
-
-
-
-</BODY>
-</HTML>
+</html>
