--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-39.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-39.htm
@@ -1,44 +1,62 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Opening a type hierarchy on a Java element</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Opening a type hierarchy on a Java element</H1>
-<P CLASS="Para">
-The type hierarchy can either be opened based on the current selection or through a dialog that allows you to select a type.</P>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p dir="ltr">
-<a href="../tasks/tasks-7.htm">Changing new type 
-hierarchy defaults</a><br>
-<a href="../tasks/tasks-11.htm">Creating Java 
-elements</a><br>
-<a href="../tasks/tasks-39.htm">Opening a type 
-hierarchy on a Java element</a><br>
-<a href="../tasks/tasks-40.htm">Opening a type 
-hierarchy on the current text selection</a><br>
-<a href="../tasks/tasks-41.htm">Opening a type 
-hierarchy in the workbench</a><br>
-<a href="../tasks/tasks-42.htm">Opening a type 
-hierarchy in its own perspective</a><br>
-<a href="../delete/tasks-37.htm">Using the Hierarchy 
-view</a></p>
-<P>&nbsp;<br>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<div class=Section1>
 
-</P>
+<h1>Opening a type hierarchy on a Java element</h1>
 
+<p class=para>To open a type hierarchy:</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo3;
+tab-stops:list .5in'><![if !supportLists]><span style='font-family:Symbol'>·<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><![endif]>Select a java element in a Java view and</p>
 
+<p class=para style='margin-left:1.0in;text-indent:-.25in;mso-list:l1 level2 lfo3;
+tab-stops:list 1.0in'><![if !supportLists]><span style='font-family:Symbol'>·<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><![endif]>Press <b>F4</b> or </p>
 
+<p class=para style='margin-left:1.0in;text-indent:-.25in;mso-list:l1 level2 lfo3;
+tab-stops:list 1.0in'><![if !supportLists]><span style='font-family:Symbol'>·<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><![endif]>Choose <b>Open Type Hierarchy</b> from the view&#8217;s
+pop-up menu or</p>
 
-</BODY>
-</HTML>
+<p class=para style='margin-left:1.0in;text-indent:-.25in;mso-list:l1 level2 lfo3;
+tab-stops:list 1.0in'><![if !supportLists]><span style='font-family:Symbol'>·<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><![endif]>Drag and drop the element to the Hierarchy view</p>
+
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
+
+<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\tasks\tasks-7.htm">Changing new type hierarchy defaults</a><br>
+<a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
+<a href="..\tasks\tasks-39.htm">Opening a type hierarchy on a Java element</a><br>
+<a href="..\tasks\tasks-40.htm">Opening a type hierarchy on the current text
+selection</a><br>
+<a href="..\tasks\tasks-41.htm">Opening a type hierarchy in the workbench</a><br>
+<a href="..\tasks\tasks-42.htm">Opening a type hierarchy in its own perspective</a><br>
+<a href="..\delete\tasks-37.htm">Using the Hierarchy view</a></p>
+
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+
+</div>
+
+</body>
+
+</html>
