--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-47.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-47.htm
@@ -1,69 +1,64 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Filtering elements</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Filtering elements</H1>
-<P CLASS="Para">
-To filter elements:</P>
-<ol>
-  <li>
-<P CLASS="Para">
-On the Packages view toolbar, click the <b>Menu</b> button to see the filtering 
-options.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Select or clear the <b>Show Referenced Libraries</b> option to display or hide 
-the libraries referenced by projects in the view. (This option is toggled on by 
-default.)</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Click the <b>Menu</b> button again and select <b>Filters</b>. The Package 
-Filters page opens.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Select patterns for filtering the view: </P>
-  </li>
-</ol>
-<ul>
-  <li>
-<P CLASS="Para">
-Select the <b>.*</b> check box to hide system files. (This filter is selected by 
-default.)</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Select the
-<SPAN CLASS="Filename">
-<b>*$*.class</b> </SPAN>check box to hide inner classes. This filter is useful 
-when drilling down into the contents of a JAR file to hide inner classes.</P>
-  </li>
-</ul>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p><a href="../concepts/concepts-3.htm">Java projects</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-3.htm">Showing and hiding 
-system files</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-90.htm">Packages view</a></p>
-<P>&nbsp;<br>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<div class=Section1>
 
-</P>
+<h1>Filtering elements</h1>
 
+<p class=para>To filter elements:</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>On the Package Explorer view toolbar, click the <b>Menu</b>
+button and choose <b>Filters</b>.</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Select or clear the filters that you want to apply to the view
+(read <b>Filter Description </b>to learn about the selected filter&#8217;s functionality).</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Optionally, you can select patterns for filtering the view. To
+do so:</p>
 
-</BODY>
-</HTML>
+<p class=para style='margin-left:1.0in;text-indent:-.25in;mso-list:l1 level2 lfo1;
+tab-stops:list 1.0in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Select the <b>Name filter patterns</b> checkbox at the top of
+the dialog</p>
+
+<p class=para style='margin-left:1.0in;text-indent:-.25in;mso-list:l1 level2 lfo1;
+tab-stops:list 1.0in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the text field below, specify the desired patterns (names
+matching one of the patterns will be hidden).</p>
+
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
+
+<p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\tasks\tasks-3.htm">Showing and hiding system files</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
+
+<p><a href="..\reference\ref-90.htm">Packages view</a></p>
+
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+
+</div>
+
+</body>
+
+</html>
