--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-59.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-59.htm
@@ -1,71 +1,72 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Adding required import statements</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Adding required import statements</H1>
-<P CLASS="Para">
-The Java editor can help you add required import statements for a selected type inside a compilation unit.</P>
-<ol>
-  <li>
-<P CLASS="Para">
-Select a type in your Java code, and do one of the following:</P>
-<UL CLASS="UnorderedList">
-<LI CLASS="Item">
-Select <b> <SPAN CLASS="Label">
-Add Import</SPAN></b>
- from the pop-up menu in the editor </LI>
-<LI CLASS="Item">
-Select <b>Edit</b> &gt; <b>Add Import</b> from the menu bar.</LI>
-<LI CLASS="Item">
-Press <b>Ctrl</b>+<b>Shift</b>+<b>M</b></LI>
-</UL>
-  </li>
-  <li>Either the editor can identify the type or you are prompted to choose the desired type from a list of possible types.</li>
-  <li>
-<P CLASS="Para">
-The import statement is generated and inserted as specified by the import order preference.</P>
-  </li>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
+
+<div class=Section1>
+
+<h1>Adding required import statements</h1>
+
+<p class=para>The Java editor can help you add required import statements for a
+selected type inside a compilation unit.</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Select a reference to a type in your Java code, and do one of
+the following:</p>
+
+<ol start=1 type=1>
+ <ul type=circle>
+  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
+      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Select <b>Source &gt;</b>
+      <span class=label><b>Add Import</b></span> from the pop-up menu in the
+      editor </li>
+  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
+      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Select <b>Source</b>
+      &gt; <b>Add Import</b> from the menu bar.</li>
+  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
+      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Press <b>Ctrl</b>+<b>Shift</b>+<b>M</b></li>
+ </ul>
+ <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
+     mso-list:l0 level1 lfo1;tab-stops:list .5in'>Either the editor can
+     identify the type or you are prompted to choose the desired type from a
+     list of possible types.</li>
 </ol>
-<P>&nbsp;</P>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>The import statement is generated and inserted as specified by
+the import order preference.</p>
 
+<p>&nbsp;</p>
 
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
 
+<p><a href="..\concepts\concepts-7.htm">Java editor</a></p>
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
 
+<p><a href="..\tasks\tasks-58.htm">Managing import statements</a><br>
+<a href="..\tasks\tasks-60.htm">Organizing existing import statements</a><br>
+<a href="..\tasks\tasks-61.htm">Setting the order of import statements</a></p>
 
+<p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
 
+<p><a href="..\reference\ref-116.htm">Refactoring actions</a></p>
 
+<p><br>
+<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 
-<p>
-<a href="../concepts/concepts-7.htm">Java editor</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p>
-<a href="../tasks/tasks-58.htm">Managing import 
-statements</a><br>
-<a href="../tasks/tasks-60.htm">Organizing existing import statements</a><br>
-<a href="../tasks/tasks-61.htm">Setting the order of 
-import statements</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-116.htm">Refactoring 
-actions</a></p>
-<P><br>
+</div>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+</body>
 
-</P>
-
-
-
-
-
-</BODY>
-</HTML>
+</html>
