--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-64.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-64.htm
@@ -1,61 +1,79 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Restoring a deleted workbench element</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Restoring a deleted workbench element</H1>
-<ol>
-  <li>
-<p CLASS="Head">
-Ensure that the Outline view is visible.</li>
-<li>
-<p CLASS="Head">
-Open the compilation unit to which you want to add a previously-removed Java element from the local history.</li>
-<li>
-<p CLASS="Head">
-Activate the editor by clicking its tab in the editor area, and the Outline view shows the content of the Java file.</li>
-<li>
-<p CLASS="Head">
-In the Outline view, select the element to whose container type you want to restore the deleted element.</li>
-<li>
-<p CLASS="Head">
-From the type's pop-up menu in the Outline view, select <b> <SPAN CLASS="Label">
-Add from Local History</SPAN></b>.</li>
-<li>
-<p CLASS="Head">
-In the upper pane of the resulting dialog, all available editions of the selected element in the local history are displayed.</li>
-<li>
-<p CLASS="Head">
-Select a version in the upper pane to view the content of the selected element.</li>
-<li>
-<p CLASS="Head">
-When you have identified the edition that you want to restore, press <b> <SPAN CLASS="Label">
-OK</SPAN></b>.
-The local history edition is loaded into the editor.</li>
-</ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p><a href="../concepts/concepts-7.htm">Java editor</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-62.htm">Using the local 
-history</a><br>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
+
+<div class=Section1>
+
+<h1>Restoring a deleted workbench element</h1>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Ensure that a Java view that show Java elements inside files
+(such as the Outline view) is visible.</p>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Open the compilation unit to which you want to add a
+previously-removed Java element from the local history.</p>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Activate the editor by clicking its tab in the editor area,
+and the Java view shows the content of the Java file.</p>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the Java view, select the element to whose container type
+you want to restore the deleted element.</p>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>From the type's pop-up menu in the Java view, select <span
+class=label><b>Restore from Local History</b></span>.</p>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the upper pane of the resulting dialog, all available
+editions of the selected element in the local history are displayed.</p>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Select an edition in the upper pane to view the content of the
+selected element.</p>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>When you have identified the edition that you want to restore,
+press <span class=label><b>Restore</b></span>. The local history edition is
+loaded into the editor.</p>
+
+<p class=head><img width=159 height=27 id="_x0000_i1025"
+src="..\images\ngrelc.gif" alt="Related concepts" border=0></p>
+
+<p><a href="..\concepts\concepts-7.htm">Java editor</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\tasks\tasks-62.htm">Using the local history</a><br>
 &nbsp;</p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-102.htm">Outline view for Java</a></p>
-<P>&nbsp;<br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
 
-</P>
+<p><a href="..\reference\ref-102.htm">Outline view for Java</a></p>
 
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 
+</div>
 
+</body>
 
-
-</BODY>
-</HTML>
+</html>
