--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
@@ -1,45 +1,66 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Formatting files or portions of code</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Formatting files or portions of code</H1>
-<ol>
-  <li>
-<p CLASS="Head">
-Open a Java editor on the Java file whose source code you want to format (either partially or completely).</li>
-<li>
-<p CLASS="Head">
-Select the region of the code you want to format. If nothing is selected, then all of the editor content is formatted.</li>
-<li>
-<p CLASS="Head">
-From the editor's pop-up menu, select <b> <SPAN CLASS="Label">
-Format</SPAN></b>.
-The code is formatted according to your indicated preferences (<b>Workbench</b> &gt; 
-<b>Preferences</b> &gt; <b>Java</b> &gt; <b>Code Formatter</b>).</li>
-</ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
-<a href="../concepts/concepts-7.htm">Java editor</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-66.htm">Formatting Java code</a><br>
-<a href="../tasks/tasks-68.htm">Setting code 
-formatting preferences</a></p>
-<P>&nbsp;<br>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<div class=Section1>
 
-</P>
+<h1>Formatting files or portions of code</h1>
 
+<p class=para>To format Java code:</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Use the Code Formatting Preferences page (<b>Window</b> &gt; <b>Preferences</b>
+&gt; <b>Java</b> &gt; <b>Code Formatter</b>) to specify your preferences for code
+formatting. </p>
 
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Open a Java file and select the code you want to format. If
+nothing is selected, then all of the editor content is formatted.</p>
 
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Format the code by either</p>
 
-</BODY>
-</HTML>
+<p class=head style='margin-left:1.0in;text-indent:-.25in;mso-list:l1 level2 lfo2;
+tab-stops:list 1.0in'><![if !supportLists]><span style='font-family:Symbol'>·<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><![endif]>Selecting Format from the editor's pop-up menu or</p>
+
+<p class=head style='margin-left:1.0in;text-indent:-.25in;mso-list:l1 level2 lfo2;
+tab-stops:list 1.0in'><![if !supportLists]><span style='font-family:Symbol'>·<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><![endif]>Pressing <b>Ctrl+Shift+F</b> or</p>
+
+<p class=head style='margin-left:1.0in;text-indent:-.25in;mso-list:l1 level2 lfo2;
+tab-stops:list 1.0in'><![if !supportLists]><span style='font-family:Symbol'>·<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><![endif]>Selecting <b>Source &gt; Format</b> from the menu bar.</p>
+
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
+
+<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a><br>
+<a href="..\concepts\concepts-7.htm">Java editor</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\tasks\tasks-66.htm">Formatting Java code</a><br>
+<a href="..\tasks\tasks-68.htm">Setting code formatting preferences</a></p>
+
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+
+</div>
+
+</body>
+
+</html>
