--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-68.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-68.htm
@@ -1,59 +1,59 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Setting code formatting preferences</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head" dir="ltr">
-Setting code formatting preferences</H1>
-<ol>
-  <li>
-<p CLASS="Head">
-From the workbench menu bar, select <b>Workbench</b> &gt; <b>Preferences. </b>
-The Workbench Preferences page opens.</li>
-<li>
-<p CLASS="Head">
-In the left pane, expand the <b>Java</b> category and select <b>Code Formatter</b>. 
-The Code Formatter Preferences page opens.</li>
-<li>
-<p CLASS="Head">
-In the <b> <SPAN CLASS="Label">
-New Lines</SPAN></b>, <SPAN CLASS="Label">
-<b>Line Splitting, </b>and<b>
-Style</b></SPAN> tabs, select the code formatting conventions that you want the formatter to follow.</li>
-<li>
-<p CLASS="Head">
-Note that at the bottom  of the page, you can observe an example effect of each individual code formatting option and see a preview of what your formatted code 
-will look like.</li>
-<li>
-<p CLASS="Head">
-Click <b> <SPAN CLASS="Label">
-Apply</SPAN></b> to apply your changes.</li>
-<li>
-<p CLASS="Head">
-Click <b> <SPAN CLASS="Label">
-OK</SPAN></b>
- when you are done.</li>
-</ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-66.htm">Formatting Java code</a><br>
-<a href="../tasks/tasks-67.htm">Formatting files or 
-portions of code</a></p>
-<P>&nbsp;<br>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<div class=Section1>
 
-</P>
+<h1>Setting code formatting preferences</h1>
 
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>From the workbench menu bar, select <b>Window</b> &gt; <b>Preferences.
+</b>The Workbench Preferences page opens.</p>
 
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the left pane, expand the <b>Java</b> category and select <b>Code
+Formatter</b>. The Code Formatter Preferences page opens.</p>
 
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the <span class=label><b>New Lines</b></span>, <span
+class=label><b>Line Splitting, </b>and<b> Style</b></span> tabs, select the
+code formatting conventions that you want the formatter to follow.</p>
 
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Note that at the bottom of the page, you can observe an
+example effect of each individual code formatting option and see a preview of what
+your formatted code will look like.</p>
 
-</BODY>
-</HTML>
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Click <span class=label><b>OK</b></span> when you are done.</p>
+
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
+
+<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\tasks\tasks-66.htm">Formatting Java code</a><br>
+<a href="..\tasks\tasks-67.htm">Formatting files or portions of code</a></p>
+
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+
+</div>
+
+</body>
+
+</html>
