--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
@@ -1,52 +1,60 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Showing a type's compilation unit in the Packages view</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Showing a type's compilation unit in the Packages view</H1>
-<P CLASS="Para">
-You can navigate from a type to its compilation unit in the Packages view.</P>
-<ol>
-  <li>
-<P CLASS="Para">
-In the Hierarchy or Outline view, select a type.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-From the type's pop-up menu, select <b> <SPAN CLASS="Label">
-Show in Packages View</SPAN></b>.
-If the Packages view is not already open, then it opens in the current perspective.
-The workbench  navigates to the type's compilation unit. </P>
-  </li>
-</ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p><a href="../concepts/concepts-6.htm">Java views</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-129.htm">Setting execution 
-arguments</a><br>
-<a href="../tasks/tasks-92.htm">Renaming a 
-compilation unit</a><br>
-<a href="../tasks/tasks-75.htm">Opening a type in 
-the Packages view</a><br>
-<a href="../tasks/tasks-60.htm">Organizing existing 
-import statements</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-90.htm">Packages view</a></p>
-<P>&nbsp;<br>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<div class=Section1>
 
-</P>
+<h1>Showing an element in the Package Explorer view</h1>
 
+<p class=para>You can reveal an element&#8217;s location in the Package Explorer
+view.</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the Hierarchy or Outline view, select a type or one of its
+members.</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>From the selected element's pop-up menu, select <span
+class=label><b>Show in Package Explorer</b></span>. If the Package Explorer
+view is not already open, then it opens in the current perspective. The
+workbench navigates to the selected element.</p>
 
+<p class=para style='margin-left:.25in'>Note: The element might not be revealed
+if Package Explorer filters are active or the <b>Window &gt; Preferences &gt;
+Java &gt; Appearance &gt; Show Members in Package Explorer</b> preference is
+unselected. </p>
 
-</BODY>
-</HTML>
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
+
+<p><a href="..\concepts\concepts-6.htm">Java views</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\tasks\tasks-129.htm">Setting execution arguments</a><br>
+<a href="..\tasks\tasks-92.htm">Renaming a compilation unit</a><br>
+<a href="..\tasks\tasks-75.htm">Opening a type in the Packages view</a><br>
+<a href="..\tasks\tasks-60.htm">Organizing existing import statements</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
+
+<p><a href="..\reference\ref-90.htm">Packages view</a></p>
+
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+
+</div>
+
+</body>
+
+</html>
