--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-75.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-75.htm
@@ -1,64 +1,67 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Opening a type in the Packages view</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Opening a type in the Packages view</H1>
-<P CLASS="Para">
-You can open the Packages view on any type that is included on a project's class path.</P>
-<ol>
-  <li>
-<P CLASS="Para">
-From the pop-up menu in the Packages view, select <b>Go To</b> &gt; <b>Type</b>.
-The Open Type page opens.<br>
-<b>Note:</b>	If a type name is used for both an interface and a class, the icon shown in the upper pane in the dialog will be either the interface icon or the class icon for both types.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-In the <b> <SPAN CLASS="Label">
-Choose a type</SPAN></b>
- field, begin typing an expression to narrow the list of available types, using wildcards as needed.
-As you type, the list is filtered to display only types that match the current expression.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-In the <b> <SPAN CLASS="Label">
-Matching Types</SPAN></b>
- list, select a type.
-When there is more than one definition of a type, then in the <b> <SPAN CLASS="Label">
-In Packages</SPAN></b>
- list, select a package and project.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Click <b> <SPAN CLASS="Label">
-OK</SPAN></b>
- when you are done.
-The selected type is displayed in the Packages view.</P>
-  </li>
-</ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-74.htm">Showing a type's 
-compilation unit in the Packages view</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-90.htm">Packages view</a></p>
-<P>&nbsp;<br>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<div class=Section1>
 
-</P>
+<h1>Opening a type in the Package Explorer view</h1>
 
+<p class=para>You can open the Package Explorer view on any type that is included
+on a project's class path.</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>From the menu bar, select <b>Navigate &gt; Go To &gt; Type.</b>
+The Go To Type dialog opens.</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the <span class=label><b>Choose a type</b></span> field,
+begin typing an expression to narrow the list of available types, using
+wildcards as needed. As you type, the list is filtered to display only types
+that match the current expression.</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the <span class=label><b>Matching Types</b></span> list,
+select a type. When there is more than one definition of a type, then select a
+package in the <span class=label><b>Qualifier</b></span> list.</p>
 
-</BODY>
-</HTML>
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Click <span class=label><b>OK</b></span> when you are done.
+The selected type is displayed in the Package Explorer view.</p>
+
+<p class=para style='margin-left:.25in'><b>Note:</b> Revealing may not be
+possible if Package Explorer filters are applied.</p>
+
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
+
+<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\tasks\tasks-74.htm">Showing a type's compilation unit in the
+Packages view</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
+
+<p><a href="..\reference\ref-90.htm">Packages view</a></p>
+
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+
+</div>
+
+</body>
+
+</html>
