--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-76.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-76.htm
@@ -1,93 +1,69 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Opening an editor on a type</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Opening an editor on a type</H1>
-<P CLASS="Para">
-You can open an editor on any type in the workbench.</P>
-<P CLASS="Para">
-<b>Note:</b>	If you open a type from a CLASS or JAR file, you will see an empty editor unless you have attached source to it.</P>
-<ol>
-  <li>
-<P CLASS="Para">
-From the menu bar, select <b>Project</b> &gt; <b>Open Type</b>.
-The Open Type dialog opens.<br>
-<b>Note:</b>	If a type name is used for both an interface and a class, the icon shown in the upper pane in the dialog will be either the interface icon or the class icon for both types.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-In the <b> <SPAN CLASS="Label">
-Choose a type</SPAN></b>
- field, begin typing an expression to narrow the list of available types, using wildcards as needed.
-As you type, the list is filtered to display only types that match the current expression.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-In the <b> <SPAN CLASS="Label">
-Matching Types</SPAN></b>
- list, select a type.
-When there is more than one definition of a type, then in the <b> <SPAN CLASS="Label">
-In Packages</SPAN></b>
- list, select a package and project.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Select or clear the <b> <SPAN CLASS="Label">
-Show in Type Hierarchy</SPAN></b>
- option to indicate whether you also want to open the type in the Hierarchy view.</P>
-<P CLASS="Para">
-If you chose this option, the type's hierarchy is shown either in the Hierarchy view in the current perspective (it will open automatically if needed) or in a new Java Hierarchy perspective, depending on the option chosen for new type hierarchies on the Java preferences page (<b>Workbench</b> &gt; 
-<b>Preferences</b> &gt; <b>Java</b>).
-If it opens in a new Java Hierarchy perspective, then it opens in a location dependent upon the option chosen for new perspectives on the Workbench preferences page (<b>Workbench</b> &gt; 
-<b>Preferences</b> &gt; <b>Workbench</b>).</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Click <b> <SPAN CLASS="Label">
-OK</SPAN></b>
- when you are done.
-An editor opens on the selected type, and if selected, the type's hierarchy is shown.</P>
-  </li>
-</ol>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
 
+<div class=Section1>
 
+<h1>Opening an editor on a type</h1>
 
+<p class=para>You can open an editor on any type in the workbench.</p>
 
+<p class=para><b>Note:</b> If you open a type from a CLASS or JAR file, you
+will see an empty editor unless you have attached source to it.</p>
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Press Ctrl+Shift+T or, select <b>Navigate</b> &gt; <b>Open
+Type </b>from the menu bar. The Open Type dialog opens.</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the <span class=label><b>Choose a type</b></span> field,
+begin typing an expression to narrow the list of available types, using
+wildcards as needed. As you type, the list is filtered to display only types
+that match the current expression.</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the <span class=label><b>Matching Types</b></span> list,
+select a type. When there is more than one definition of a type, then select a
+package in the <span class=label><b>Qualifier</b></span> list.</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Click <span class=label><b>OK</b></span> when you are done. An
+editor opens on the selected type.</p>
 
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
 
-<p><a href="../concepts/concepts-7.htm">Java editor</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p>
-<a href="../tasks/tasks-115.htm">Attaching source to 
-a JAR file</a><br>
-<a href="../tasks/tasks-73.htm">Opening an editor 
-for a selected element</a><br>
-<a href="../tasks/tasks-54.htm">Using the Java editor</a><br>
+<p><a href="..\concepts\concepts-7.htm">Java editor</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\tasks\tasks-115.htm">Attaching source to a JAR file</a><br>
+<a href="..\tasks\tasks-73.htm">Opening an editor for a selected element</a><br>
+<a href="..\tasks\tasks-54.htm">Using the Java editor</a><br>
 &nbsp;</p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-5.htm">Java editor actions</a><br>
-<a href="../reference/ref-24.htm">Views and editors</a></p>
-<P><br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
 
-</P>
+<p><a href="..\reference\ref-5.htm">Java editor actions</a><br>
+<a href="..\reference\ref-24.htm">Views and editors</a></p>
 
+<p><br>
+<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 
+</div>
 
+</body>
 
-
-</BODY>
-</HTML>
+</html>
