--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-83.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-83.htm
@@ -1,88 +1,94 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Refactoring with preview</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Refactoring with preview</H1>
-<ol>
-  <li>
-<p CLASS="Head">
-Activate a refactoring command. For example, rename a type by selecting it in the Outline view and choosing 
-<b>Refactor</b> &gt; <b>Rename</b> from its pop-up menu.</li>
-<li>
-<p CLASS="Head">
-The Refactoring Parameters page prompts you for information necessary for the action. For example, the Rename Type Refactoring 
-wizard asks you for the new name for the selected type.</li>
-<li>
-<p CLASS="Head">
-Provide the necessary data on the parameters page, and then click <b> <SPAN CLASS="Label">
-Next</SPAN></b>.</li>
-<li>
-<P CLASS="Para">
-If problems more severe than the default level set in the Refactoring Preferences 
-page (<b>Workbench</b> &gt; <b>Preferences</b> &gt; <b>Java</b> &gt; <b>Refactoring</b>) are anticipated, then the problems page comes to the front to display anticipated errors.</P>
-<UL CLASS="UnorderedList">
-<LI CLASS="Item">
-If a Stop problem was anticipated, then the <b> <SPAN CLASS="Label">
-Finish</SPAN></b>
- and <b> <SPAN CLASS="Label">
-Next</SPAN></b>
- buttons are disabled, and you are prevented from carrying out the refactoring. If the problems are related to data provided on the parameters page, click
-<b> <SPAN CLASS="Label">
-Back</SPAN></b>
- and attempt to remedy the problem. Otherwise, click <b> <SPAN CLASS="Label">
-Cancel</SPAN></b>
- to close the wizard.</LI>
-<LI CLASS="Item">
-If other kinds of problems were anticipated, you can click <b> <SPAN CLASS="Label">
-Next</SPAN></b>
- to acknowledge the problems and move on to the preview page.</LI>
-</UL>
-<p CLASS="Head">
-The Refactoring Preview page opens.<br>
-&nbsp;</li>
-<li>Click <b> <SPAN CLASS="Label">
-Finish</SPAN></b>
- to execute the refactoring and close the wizard. If you chose in the 
-Refactoring Preferences page to be notified of any problems, then any detected problems are displayed at this time.</li>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
+
+<div class=Section1>
+
+<h1>Refactoring with preview</h1>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Activate a refactoring command. For example, rename a type by
+selecting it in the Outline view and choosing <b>Refactor</b> &gt; <b>Rename</b>
+from its pop-up menu.</p>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>The Refactoring Parameters page prompts you for information
+necessary for the action. For example, the Rename Type Refactoring wizard asks
+you for the new name for the selected type.</p>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Provide the necessary data on the parameters page, and then
+click <span class=label><b>Next</b></span>.</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>If problems more severe than the default level set in the
+Refactoring Preferences page (<b>Window</b> &gt; <b>Preferences</b> &gt; <b>Java</b>
+&gt; <b>Refactoring</b>) are anticipated, then the problems page comes to the
+front to display anticipated errors.</p>
+
+<ol start=4 type=1>
+ <ul type=circle>
+  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
+      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>If a Stop problem was
+      anticipated, then the <span class=label><b>Finish</b></span> and <span
+      class=label><b>Next</b></span> buttons are disabled, and you are
+      prevented from carrying out the refactoring. If the problems are related
+      to data provided on the parameters page, click <span class=label><b>Back</b></span>
+      and attempt to remedy the problem. Otherwise, click <span class=label><b>Cancel</b></span>
+      to close the wizard.</li>
+  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
+      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>If other kinds of
+      problems were anticipated, you can click <span class=label><b>Next</b></span>
+      to acknowledge the problems and move on to the preview page.</li>
+ </ul>
 </ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p><a href="../concepts/concepts-9.htm">Refactoring support</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p>
-<a href="../tasks/tasks-82.htm">Refactoring without 
-preview</a><br>
-<a href="../tasks/tasks-84.htm">Previewing 
-refactoring changes</a><br>
-<a href="../tasks/tasks-100.htm">Undoing a 
-refactoring operation</a><br>
-<a href="../tasks/tasks-101.htm">Redoing a 
-refactoring operation</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-116.htm">Refactoring 
-actions</a><br>
-<a href="../reference/ref-117.htm">Refactoring wizard</a><br>
-<a href="../reference/ref-23.htm">Refactoring preferences</a></p>
 
+<p class=head style='margin-left:.5in'>The Refactoring Preview page opens.<br>
+&nbsp;</p>
 
+<ol start=5 type=1>
+ <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
+     mso-list:l0 level1 lfo1;tab-stops:list .5in'>Click <span class=label><b>Finish</b></span>
+     to execute the refactoring and close the wizard. If you chose in the Refactoring
+     Preferences page to be notified of any problems, then any detected
+     problems are displayed at this time.</li>
+</ol>
 
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
 
+<p><a href="..\concepts\concepts-9.htm">Refactoring support</a></p>
 
-<P><br>
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<p><a href="..\tasks\tasks-82.htm">Refactoring without preview</a><br>
+<a href="..\tasks\tasks-84.htm">Previewing refactoring changes</a><br>
+<a href="..\tasks\tasks-100.htm">Undoing a refactoring operation</a><br>
+<a href="..\tasks\tasks-101.htm">Redoing a refactoring operation</a></p>
 
-</P>
+<p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
 
+<p><a href="..\reference\ref-116.htm">Refactoring actions</a><br>
+<a href="..\reference\ref-117.htm">Refactoring wizard</a><br>
+<a href="..\reference\ref-23.htm">Refactoring preferences</a></p>
 
+<p><br>
+<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 
+</div>
 
+</body>
 
-</BODY>
-</HTML>
+</html>
