--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-2.htm
@@ -1,37 +1,42 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Showing and hiding files</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head" dir="ltr">
-Showing and hiding files</H1>
-<P CLASS="Para">
-You can filter the file display in the Packages view.</P>
-<P CLASS="Para">
-<img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></P>
-<P CLASS="Para">
-<a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></P>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p dir="ltr"><a href="tasks-3.htm">Showing and hiding system files</a><br>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
+
+<div class=Section1>
+
+<h1>Showing and hiding files</h1>
+
+<p class=para>You can filter the file display in the Package Explorer view.</p>
+
+<p class=para><img width=159 height=27 id="_x0000_i1025"
+src="..\images\ngrelc.gif" alt="Related concepts" border=0></p>
+
+<p class=para><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="tasks-3.htm">Showing and hiding system files</a><br>
 <a href="tasks-4.htm">Showing and hiding inner types</a>&nbsp;<br>
 <a href="tasks-5.htm">Showing and hiding libraries</a><br>
 <a href="tasks-6.htm">Showing single elements or whole files</a></p>
-<p dir="ltr"><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p dir="ltr"><a href="../reference/ref-90.htm">Packages view</a></p>
-<P><br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
 
-</P>
+<p><a href="..\reference\ref-90.htm">Packages view</a></p>
 
+<p><br>
+<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 
+</div>
 
+</body>
 
-
-</BODY>
-</HTML>
+</html>
