--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-3.htm
@@ -1,64 +1,60 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Showing and hiding system files</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Showing and hiding system files</H1>
-<P CLASS="Para">
-To show system files:</P>
-<ol>
-  <li>
-<P CLASS="Para">
-Select the <b> <SPAN CLASS="Label">
-Filters</SPAN></b>
- command from the Packages view drop-down menu. </P>
-  </li>
-  <li>
-<P CLASS="Para">
-Ensure that the &quot;<SPAN CLASS="Filename">
-.*</SPAN>
-&quot; filter is not selected.</P>
-  </li>
-</ol>
-<P CLASS="Para">
-To hide system files:</P>
-<ol>
-  <li>
-<P CLASS="Para">
-Select the <b> <SPAN CLASS="Label">
-Filters</SPAN></b>
- command from the Packages view drop-down menu.  </P>
-  </li>
-  <li>
-<P CLASS="Para">
-Ensure that the &quot;<SPAN CLASS="Filename">
-.*</SPAN>
-&quot; filter is selected. This  hides files that have only a file extension but no file name, such as <SPAN CLASS="Filename">
-.classpath</SPAN>.</P>
-  </li>
-</ol>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-2.htm">Showing and hiding 
-files</a><br>
-<a href="../tasks/tasks-47.htm">Filtering elements</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<P CLASS="Para">
-<a href="../reference/ref-90.htm">Packages view</a></P>
-<P>&nbsp;<br>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<div class=Section1>
 
-</P>
+<h1>Showing and hiding system files</h1>
 
+<p class=para>To show system files:</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Select the <span class=label><b>Filters</b></span> command
+from the Package Explorer view drop-down menu. </p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Ensure that the &quot;hide <span class=filename><span
+style="mso-spacerun: yes">&nbsp;</span>.*</span> <span style="mso-spacerun:
+yes">&nbsp;</span>files&quot; filter is not selected.</p>
 
+<p class=para>To hide system files:</p>
 
-</BODY>
-</HTML>
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Select the <span class=label><b>Filters</b></span> command
+from the Package Explorer view drop-down menu. </p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Ensure that the &quot;hide <span class=filename><span
+style="mso-spacerun: yes">&nbsp;</span>.*</span> <span style="mso-spacerun:
+yes">&nbsp;</span>files&quot; filter is selected. This hides files that have
+only a file extension but no file name, such as <span class=filename>.classpath</span>.</p>
+
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelt.gif"
+alt="Related tasks" border=0></p>
+
+<p><a href="..\tasks\tasks-2.htm">Showing and hiding files</a><br>
+<a href="..\tasks\tasks-47.htm">Filtering elements</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
+
+<p class=para><a href="..\reference\ref-90.htm">Packages view</a></p>
+
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+
+</div>
+
+</body>
+
+</html>
