--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-40.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-40.htm
@@ -1,64 +1,54 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Opening a type hierarchy on the current text selection</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Opening a type hierarchy on the current text selection</H1>
-<p CLASS="Head">
-To open a type hierarchy on a text selection:</p>
-<P CLASS="Para">
-Select a Java element or some text in the editor, and do one of the following:</P>
-<UL CLASS="UnorderedList">
-<LI CLASS="Item">
-Press <b>F4</b> </LI>
-<LI CLASS="Item">
-select <b> <SPAN CLASS="Label">
-Open Type Hierarchy</SPAN></b>
- from the selection's pop-up menu.</LI>
-</UL>
-<p><b>Note:</b>	If the selected Java element (or editor selection) is not a type or a compilation unit, a beep will sound.</p>
-<P>&nbsp;</P>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
 
+<div class=Section1>
 
+<h1>Opening a type hierarchy on the current text selection</h1>
 
+<p class=head>To open a type hierarchy on a text selection:</p>
 
+<p class=para>Select a Java element or some text in the editor, and do one of
+the following:</p>
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+<ul type=disc>
+ <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
+     mso-list:l0 level1 lfo3;tab-stops:list .5in'>Press <b>F4</b> </li>
+ <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
+     mso-list:l0 level1 lfo3;tab-stops:list .5in'>select <span class=label><b>Open
+     Type Hierarchy</b></span> from the editor's pop-up menu.</li>
+</ul>
 
+<p><b>Note:</b> If the selected Java element (or editor selection) is not a
+type or a compilation unit, the hiearchy will be open on the type in which the
+current selection lies.</p>
 
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
 
+<p><a href="..\concepts\concepts-7.htm">Java editor</a></p>
 
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
 
-<p>
-<a href="../concepts/concepts-7.htm">Java editor</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-7.htm">Changing new type 
-hierarchy defaults</a><br>
-<a href="../tasks/tasks-38.htm">Changing the 
-appearance of the Hierarchy view</a><br>
-<a href="../tasks/tasks-39.htm">Opening a type 
-hierarchy on a Java element</a><br>
-<a href="../tasks/tasks-41.htm">Opening a type 
-hierarchy in the workbench</a><br>
-<a href="../tasks/tasks-42.htm">Opening a type 
-hierarchy in its own perspective</a><br>
-<a href="../delete/tasks-37.htm">Using the Hierarchy 
-view</a></p>
-<P><br>
+<p><a href="..\tasks\tasks-7.htm">Changing new type hierarchy defaults</a><br>
+<a href="..\tasks\tasks-38.htm">Changing the appearance of the Hierarchy view</a><br>
+<a href="..\tasks\tasks-39.htm">Opening a type hierarchy on a Java element</a><br>
+<a href="..\tasks\tasks-41.htm">Opening a type hierarchy in the workbench</a><br>
+<a href="..\tasks\tasks-42.htm">Opening a type hierarchy in its own perspective</a><br>
+<a href="..\delete\tasks-37.htm">Using the Hierarchy view</a></p>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<p><br>
+<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 
-</P>
+</div>
 
+</body>
 
-
-
-
-</BODY>
-</HTML>
+</html>
