--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-5.htm
@@ -1,36 +1,40 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Showing and hiding libraries</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Showing and hiding libraries</H1>
-<P CLASS="Para">
-To show library files, select the <b>Show Referenced Libraries</b> option on the 
-Packages view drop-down menu.</P>
-<P CLASS="Para">
-To hide library files, deselect the <b>Show Referenced Libraries</b> option on 
-the Packages view drop-down menu.</P>
-<p>&nbsp;</p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-2.htm">Showing and hiding 
-files</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">&nbsp;</p>
-<p><a href="../reference/ref-90.htm">Packages view</a></p>
-<P><br>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<div class=Section1>
 
-</P>
+<h1>Showing and hiding libraries</h1>
 
+<p class=para>To show library files, select the <b>Show Referenced Libraries</b>
+option on the Package Expolorer or the Packages view drop-down menu.</p>
 
+<p class=para>To hide library files, deselect the <b>Show Referenced Libraries</b>
+option on the Package Expolorer or the Packages view drop-down menu.</p>
 
+<p><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></p>
 
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelt.gif"
+alt="Related tasks" border=0></p>
 
-</BODY>
-</HTML>
+<p><a href="..\tasks\tasks-2.htm">Showing and hiding files</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelr.gif" alt="Related reference">&nbsp;</p>
+
+<p><a href="..\reference\ref-90.htm">Packages view</a></p>
+
+<p><br>
+<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+
+</div>
+
+</body>
+
+</html>
