--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-57.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-57.htm
@@ -1,66 +1,63 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Generating accessors</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Generating accessors</H1>
-<P CLASS="Para">
-The Java editor allows you to generate accessors (&quot;getters and setters&quot;) for the fields of a type inside a compilation unit.</P>
-<ol>
-  <li>
-<P CLASS="Para">
-Ensure that the Outline view is visible.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Open a Java editor for the file in which you want to generate accessors. The Outline view displays the contents of the file.</P>
-  </li>
-  <li>
-<P CLASS="Para">
- Select the field for which you want to generate accessors.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Select <b>Generate Getter and Setter</b> from the field's 
-pop-up menu.
-If possible, the accessors are generated, and they are visible in the Outline view and the editor.</P>
-  </li>
-</ol>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
 
+<div class=Section1>
 
+<h1>Generating accessors</h1>
 
+<p class=para>The Java editor allows you to generate accessors (&quot;getters
+and setters&quot;) for the fields of a type inside a compilation unit.</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the editor, select the field for which you want to generate
+accessors (or a type in which you want to create these methods).</p>
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Select <b>Generate Getter and Setter</b> from the <b>Source</b>
+pop-up menu. </p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>A dialog will open to let you select<span style="mso-spacerun:
+yes">&nbsp; </span>which methods you want to created.</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Select the methods and press OK.</p>
 
+<p class=para><img width=159 height=27 id="_x0000_i1025"
+src="..\images\ngrelc.gif" alt="Related concepts" border=0></p>
 
+<p><a href="..\concepts\concepts-7.htm">Java editor</a><br>
+<a href="..\concepts\concepts-3.htm">Java projects</a></p>
 
-<p><a href="../concepts/concepts-7.htm">Java editor</a><br>
-<a href="../concepts/concepts-3.htm">Java projects</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-54.htm">Using the Java editor</a><br>
-<a href="../tasks/tasks-20.htm">Creating a class in 
-an existing compilation unit</a><br>
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\tasks\tasks-54.htm">Using the Java editor</a><br>
+<a href="..\tasks\tasks-20.htm">Creating a class in an existing compilation
+unit</a><br>
 &nbsp;</p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-102.htm">Outline view for Java</a></p>
-<P><br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
 
-</P>
+<p><a href="..\reference\ref-102.htm">Outline view for Java</a></p>
 
+<p><br>
+<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 
+</div>
 
+</body>
 
-
-</BODY>
-</HTML>
+</html>
