--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-6.htm
@@ -1,39 +1,41 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Showing single elements or whole files</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Showing single elements or whole files</H1>
-<P CLASS="Para">
-To display a segmented view of the selected resource, click the <b> <SPAN CLASS="Label">
-Show Source of Selected Element Only</SPAN></b>
- button in the workbench toolbar. </P>
-<P CLASS="Para">
-To display a whole (non-segmented) view of the selected resource, click the <b> <SPAN CLASS="Label">
-Show Complete Source</SPAN></b>
- button in the workbench toolbar. </P>
-<P CLASS="Para">
-<b>Note</b>:	These buttons are two toggle versions of the same button.</P>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-2.htm">Showing and hiding 
-files</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-90.htm">Packages view</a></p>
-<P>&nbsp;<br>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<div class=Section1>
 
-</P>
+<h1>Showing single elements or whole files</h1>
 
+<p class=para>To display a segmented view of the selected resource, click the <span
+class=label><b>Show Source of Selected Element Only</b></span> button in the
+workbench toolbar (so that it is pressed). </p>
 
+<p class=para>To display a whole (non-segmented) view of the selected resource,
+click the <span class=label><b>Show Source of Selected Element Only</b></span> <span
+style="mso-spacerun: yes">&nbsp;</span>button in the workbench toolbar (so that
+it is de-pressed). </p>
 
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelt.gif"
+alt="Related tasks" border=0></p>
 
+<p><a href="..\tasks\tasks-2.htm">Showing and hiding files</a></p>
 
-</BODY>
-</HTML>
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
+
+<p><a href="..\reference\ref-90.htm">Packages view</a></p>
+
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+
+</div>
+
+</body>
+
+</html>
