--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-63.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-63.htm
@@ -1,68 +1,90 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Replacing a Java element with a local history edition</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Replacing a Java element with a local history edition</H1>
-<ol>
-  <li>
-<p CLASS="Head">
-Make sure that either the Outline view or the Hierarchy view is visible.</li>
-<li>
-<p CLASS="Head">
-Open a Java editor for the Java file in which you want to replace a Java element with a copy from the local history.</li>
-<li>
-<p CLASS="Head">
-Activate the editor by clicking its tab in the editor area. The Outline  or Hierarchy view also displays the Java file.</li>
-<li>
-<p CLASS="Head">
-Select the element that you want to replace.</li>
-<li>
-<p CLASS="Head">
-From the element's pop-up menu, select <b> <SPAN CLASS="Label">
-Replace from Local History</SPAN></b>.</li>
-<li>
-<p CLASS="Head">
-In the upper pane of the resulting dialog, all available editions of the selected element in the local history are displayed.</li>
-<li>
-<p CLASS="Head">
-Select a version in the upper pane to view the differences between the selected version and the version in the workbench.</li>
-<li>
-<p CLASS="Head">
-When you have identified the edition with which you want to replace the existing Java element, click <SPAN CLASS="Label">
-<b>OK</b>.</SPAN></li>
-<li>
-<P CLASS="Para">
-The local history edition replaces the current one in the editor and is displayed in the Outline view.</P>
-<P CLASS="Para">
-<b>Note:</b>	The changed compilation unit has not yet been saved at this point.</P>
-</li>
-</ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p><a href="../concepts/concepts-6.htm">Java views</a><br>
-<a href="../concepts/concepts-7.htm">Java editor</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-62.htm">Using the local 
-history</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p>
-<a href="../reference/ref-102.htm">Outline view for Java</a><br>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
+
+<div class=Section1>
+
+<h1>Replacing a Java element with a local history edition</h1>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Make sure that a Java view is visible.</p>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Open a Java editor for the Java file in which you want to
+replace a Java element with an edition from the local history.</p>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Activate the editor by clicking its tab in the editor area.
+The Java view also displays the Java file.</p>
+
+<p class=head style='margin-left:.25in'>Note: The Package Explorer view can be
+configured to show or not show Java elements in files. Use <b>Window &gt;
+Preferences &gt; Java &gt; Appearance &gt; Show Members in Package Explorer</b>
+to set you preference.</p>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Select the element that you want to replace.</p>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>From the element's pop-up menu, select <span class=label><b>Replace
+With &gt; Element from Local History</b></span>.</p>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the upper pane of the resulting dialog, all available
+editions of the selected element in the local history are displayed.</p>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Select an edition in the upper pane to view the differences
+between the selected edition and the edition in the workbench.</p>
+
+<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>When you have identified the edition with which you want to
+replace the existing Java element, click <span class=label><b>Replace</b>.</span></p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
+tab-stops:list .5in'><![if !supportLists]>9.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>The local history edition replaces the current one in the
+editor.</p>
+
+<p class=para style='margin-left:.5in'><b>Note:</b> The changed compilation
+unit has not yet been saved at this point.</p>
+
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
+
+<p><a href="..\concepts\concepts-6.htm">Java views</a><br>
+<a href="..\concepts\concepts-7.htm">Java editor</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\tasks\tasks-62.htm">Using the local history</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
+
+<p><a href="..\reference\ref-102.htm">Outline view for Java</a><br>
 &nbsp;</p>
-<P>&nbsp;<br>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 
-</P>
+</div>
 
+</body>
 
-
-
-
-</BODY>
-</HTML>
+</html>
