--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-66.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-66.htm
@@ -1,59 +1,38 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Formatting Java code</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Formatting Java code</H1>
-<P CLASS="Para">
-The Java editor supports the formatting of Java code according to your personal preferences. </P>
-<P CLASS="Para">
-To format Java code:</P>
-<ol>
-  <li>
-<P CLASS="Para">
-Use the Code Formatting Preferences page (<b>Workbench</b> &gt; <b>Preferences</b> &gt; 
-<b>Java</b> &gt; <b>Code Formatter</b>) to specify your preferences for code 
-formatting. </P>
-  </li>
-  <li>
-<p CLASS="Head">
-Open a Java file and select the code you want to format. If nothing is selected, then all of the editor content is formatted.</li>
-  <li>
-<P CLASS="Para">
-From the editor's pop-up menu, select <b> <SPAN CLASS="Label">
-Format</SPAN></b>.</P>
-  </li>
-</ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
-<a href="../concepts/concepts-7.htm">Java editor</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-68.htm">Setting code 
-formatting preferences</a><br>
-<a href="../tasks/tasks-67.htm">Formatting files or 
-portions of code</a><br>
-<a href="../tasks/tasks-65.htm">Using content/code 
-assist</a></p>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
 
+<div class=Section1>
 
+<h1>Formatting Java code</h1>
 
+<p class=para>The Java editor supports the formatting of Java code according to
+your personal preferences. </p>
 
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
 
-<P><br>
+<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a><br>
+<a href="..\concepts\concepts-7.htm">Java editor</a></p>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
 
-</P>
+<p><a href="..\tasks\tasks-68.htm">Setting code formatting preferences</a><br>
+<a href="..\tasks\tasks-67.htm">Formatting files or portions of code</a><br>
+<a href="..\tasks\tasks-65.htm">Using content/code assist</a></p>
 
+<p><br>
+<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 
+</div>
 
+</body>
 
-
-</BODY>
-</HTML>
+</html>
