--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-7.htm
@@ -1,58 +1,51 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Changing new type hierarchy defaults</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Changing new type hierarchy defaults</H1>
-<P CLASS="Para">
-New type hierarchies can open in a type Hierarchy view or in a Java Hierarchy perspective. You can indicate which is the default method for opening new type hierarchies on the preferences pages.</P>
-<ol>
-  <li>
-<P CLASS="Para">
-Select <b>Workbench</b> &gt; <b>Preferences</b>, and select the <b>Java</b> 
-category. The general Java Preferences page opens.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Select the radio button for <SPAN CLASS="Label">
-the <b>Hierarchy Perspective</b></SPAN>
- or<SPAN CLASS="Label">
- the <b>Type Hierarchy View</b></SPAN>
- as the default location in the <b> <SPAN CLASS="Label">
-Open a new type hierarchy inside</SPAN></b>
- area.</P>
-  </li>
-</ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p>
-<a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p>
-<a href="../tasks/tasks-39.htm">Opening a type 
-hierarchy on a Java element</a><br>
-<a href="../tasks/tasks-40.htm">Opening a type 
-hierarchy on the current text selection</a><br>
-<a href="../tasks/tasks-41.htm">Opening a type 
-hierarchy in the workbench</a><br>
-<a href="../tasks/tasks-42.htm">Opening a type 
-hierarchy in its own perspective</a><br>
-<a href="../delete/tasks-37.htm">Using the Hierarchy 
-view</a></p>
-<P>&nbsp;<br>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
+<div class=Section1>
 
-</P>
+<h1>Changing new type hierarchy defaults</h1>
 
+<p class=para>New type hierarchies can open in a type Hierarchy view or in a
+Java Hierarchy perspective. You can indicate which is the default method for
+opening new type hierarchies on the preferences pages.</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Select <b>Window</b> &gt; <b>Preferences</b>, and select the <b>Java</b>
+category. The general Java Preferences page opens.</p>
 
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Use the radio buttons that appear under <b>When opening a Type
+Hierarchy </b>to indicate your preference.</p>
 
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
 
-</BODY>
-</HTML>
+<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"></p>
+
+<p><a href="..\tasks\tasks-39.htm">Opening a type hierarchy on a Java element</a><br>
+<a href="..\tasks\tasks-40.htm">Opening a type hierarchy on the current text
+selection</a><br>
+<a href="..\tasks\tasks-41.htm">Opening a type hierarchy in the workbench</a><br>
+<a href="..\tasks\tasks-42.htm">Opening a type hierarchy in its own perspective</a><br>
+<a href="..\delete\tasks-37.htm">Using the Hierarchy view</a></p>
+
+<p>&nbsp;<br>
+<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+
+</div>
+
+</body>
+
+</html>
