--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-73.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-73.htm
@@ -1,64 +1,75 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Opening an editor for a selected element</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Opening an editor for a selected element</H1>
-<P CLASS="Para">
-You can select the name of a type, method, or field in the Java source editor or in the scrapbook and open an editor on the definition of the element.</P>
-<ol>
-  <li>
-<P CLASS="Para">
-In the Java editor, select the name of a type, method, or field.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Do one of the following:</P>
-<UL CLASS="UnorderedList">
-<LI CLASS="Item">
-From the menu bar, select <b>Edit</b> &gt; <b>Open on Selection</b></LI>
-<LI CLASS="Item">
-Press <b>F3</b></LI>
-</UL>
-<P CLASS="Para">
-If there are multiple definitions of the same name, a dialog is shown, and you can select one definition that you want to open. </P>
-<P CLASS="Para">
-An editor opens containing the selected element.</P>
-  </li>
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
+
+<div class=Section1>
+
+<h1>Opening an editor for a selected element</h1>
+
+<p class=para>You can select the name of a type, method, or field in the Java
+source editor or in the scrapbook and open an editor on the definition of the
+element.</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>In the Java editor, select the name of a type, method, or
+field.</p>
+
+<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
+tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span><![endif]>Do one of the following:</p>
+
+<ol start=2 type=1>
+ <ul type=circle>
+  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
+      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>From the menu bar,
+      select <b>Navigate</b> &gt; <b>Open Declaration</b></li>
+  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
+      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>From the editor&#8217;s
+      pop-up menu, select <b>Open Declaration</b></li>
+  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
+      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Press <b>F3</b></li>
+ </ul>
 </ol>
-<P CLASS="Para">
-&nbsp;</P>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-<p><a href="../concepts/concepts-7.htm">Java editor</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+
+<p class=para style='margin-left:.5in'>If there are multiple definitions of the
+same name, a dialog is shown, and you can select one definition that you want
+to open. </p>
+
+<p class=para style='margin-left:.5in'>An editor opens containing the selected
+element.</p>
+
+<p class=para>&nbsp;</p>
+
+<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+alt="Related concepts" border=0></p>
+
+<p><a href="..\concepts\concepts-7.htm">Java editor</a></p>
+
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="..\images\ngrelt.gif" alt="Related tasks"><br>
 <br>
-<a href="../tasks/tasks-44.htm">Finding overridden 
-methods</a><br>
-<a href="../tasks/tasks-54.htm">Using the Java editor</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p dir="ltr"><a href="../reference/ref-5.htm">Java editor actions</a><br>
-<a href="../reference/ref-26.htm">Syntax highlighting</a><br>
-<a href="../reference/ref-24.htm">Views and editors</a></p>
+<a href="..\tasks\tasks-44.htm">Finding overridden methods</a><br>
+<a href="..\tasks\tasks-54.htm">Using the Java editor</a></p>
 
+<p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="..\images\ngrelr.gif" alt="Related reference"></p>
 
+<p><a href="..\reference\ref-5.htm">Java editor actions</a><br>
+<a href="..\reference\ref-26.htm">Syntax highlighting</a><br>
+<a href="..\reference\ref-24.htm">Views and editors</a></p>
 
+<p><br>
+<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 
+</div>
 
-<P><br>
+</body>
 
-<img src = ../images/ngibmcpy.gif width="195" height="12">
-
-</P>
-
-
-
-
-
-</BODY>
-</HTML>
+</html>
